--- a/不同平台做题问题/平台差异.md
+++ b/不同平台做题问题/平台差异.md
@@ -1,10 +1,10 @@
-### leet-code
+### leet-code/牛客
 
 leet-code只关注算法本身，不需要操作输入输出，他会给一个初始函数，输入已经含在函数**参数**里，你只需要把值**return**出来即可，非常简单
 
 
 
-### acwing/牛客/一些竞赛平台
+### acwing/一些竞赛平台
 
 不止要关注算法本身，还需要编写**主函数**，来进行输入和输出，
 
